# learning-vulkan

./: .gitignore  CMakeLists.txt  DescriptorSet.cpp  DescriptorSet.hpp  Mesh.cpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  Screen.cpp  Screen.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBufferData.hpp  Vertex.cpp  Vertex.hpp  components.cpp  components.hpp  entities.cpp  entities.hpp  main.cpp
assets/blender/skybox/: skybox.blend  skybox.blend1
assets/models/: skybox.mtl
assets/textures/: skybox.xcf
shaders/: compile.py  shader.frag  shader.vert
